// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dom2 static style complex scenarios should handle comprehensive CSS with all property types: comprehensive-css 1`] = `
{
  "--border-radius": {
    "setterCode": "defineStyleVariable("--border-radius", "8px")",
    "valueCode": ""8px"",
  },
  "--opacity-value": {
    "setterCode": "defineStyleVariable("--opacity-value", "0.8")",
    "valueCode": ""0.8"",
  },
  "--primary-color": {
    "setterCode": "defineStyleVariable("--primary-color", "#007AFF")",
    "valueCode": ""#007AFF"",
  },
  "--secondary-color": {
    "setterCode": "defineStyleVariable("--secondary-color", "#34C759")",
    "valueCode": ""#34C759"",
  },
  "--spacing": {
    "setterCode": "defineStyleVariable("--spacing", "16px")",
    "valueCode": ""16px"",
  },
  "align-items": {
    "setterCode": "setStyleAlignItems(UTSCPP.propertyAccess(UniCSSAlignItemsType, "::", "Center"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSAlignItemsType, "::", "Center")",
  },
  "border-bottom-style": {
    "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
  },
  "border-bottom-width": {
    "setterCode": "setStyleBorderBottomWidth(2, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{2, UniCSSUnitType.PX}",
  },
  "border-left-style": {
    "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
  },
  "border-left-width": {
    "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "display": {
    "setterCode": "setStyleDisplay(UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex")",
  },
  "flex-direction": {
    "setterCode": "setStyleFlexDirection(UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "Row"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "Row")",
  },
  "flex-grow": {
    "setterCode": "setStyleFlexGrow(1)",
    "valueCode": "1",
  },
  "flex-shrink": {
    "setterCode": "setStyleFlexShrink(0)",
    "valueCode": "0",
  },
  "height": {
    "setterCode": "setStyleHeight(200, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{200, UniCSSUnitType.PX}",
  },
  "justify-content": {
    "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "FlexStart"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "FlexStart")",
  },
  "left": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Left, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
  "margin-bottom": {
    "setterCode": "setStyleMarginBottom(8, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{8, UniCSSUnitType.PX}",
  },
  "margin-top": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MarginTop, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
  "max-width": {
    "setterCode": "setStyleMaxWidth(100, UniCSSUnitType.PCT)",
    "valueCode": "UniCSSUnitValue{100, UniCSSUnitType.PCT}",
  },
  "min-height": {
    "setterCode": "setStyleMinHeight(50, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{50, UniCSSUnitType.PX}",
  },
  "padding-left": {
    "setterCode": "setStylePaddingLeft(12, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{12, UniCSSUnitType.PX}",
  },
  "padding-right": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.PaddingRight, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
  "position": {
    "setterCode": "setStylePosition(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Relative"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Relative")",
  },
  "top": {
    "setterCode": "setStyleTop(10, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{10, UniCSSUnitType.PX}",
  },
  "width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Width, "var(--spacing)")",
    "valueCode": ""var(--spacing)"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-android-dom-kt 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-harmony-dom-c 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
  "align-items": {
    "setterCode": "setStyleAlignItems(UTSCPP.propertyAccess(UniCSSAlignItemsType, "::", "Center"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSAlignItemsType, "::", "Center")",
  },
  "display": {
    "setterCode": "setStyleDisplay(UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex")",
  },
  "height": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Height, "var(--size)")",
    "valueCode": ""var(--size)"",
  },
  "left": {
    "setterCode": "setStyleLeft(0, UniCSSUnitType.NONE)",
    "valueCode": "UniCSSUnitValue{0, UniCSSUnitType.NONE}",
  },
  "position": {
    "setterCode": "setStylePosition(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute")",
  },
  "top": {
    "setterCode": "setStyleTop(0, UniCSSUnitType.NONE)",
    "valueCode": "UniCSSUnitValue{0, UniCSSUnitType.NONE}",
  },
  "width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Width, "var(--size)")",
    "valueCode": ""var(--size)"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-harmony-nv-c 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
  "background-color": {
    "setterCode": "backgroundColor(0xffff0000)",
    "valueCode": "0xffff0000",
  },
  "display": {
    "setterCode": "display(UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex")",
  },
  "opacity": {
    "setterCode": "opacity(0.9)",
    "valueCode": "0.9",
  },
  "position": {
    "setterCode": "position(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute")",
  },
}
`;

exports[`dom2 static style complex scenarios should handle cross-platform compatibility: app-ios-dom-oc 1`] = `
{
  "--size": {
    "setterCode": "defineStyleVariable("--size", "24px")",
    "valueCode": ""24px"",
  },
  "--theme-color": {
    "setterCode": "defineStyleVariable("--theme-color", "#FF6B6B")",
    "valueCode": ""#FF6B6B"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle edge cases with complex CSS: edge-cases 1`] = `
{
  "--double-nested": {
    "setterCode": "defineStyleVariable("--double-nested", "var(--nested-var)")",
    "valueCode": ""var(--nested-var)"",
  },
  "--empty-var": {
    "setterCode": "defineStyleVariable("--empty-var", "")",
    "valueCode": """",
  },
  "--nested-var": {
    "setterCode": "defineStyleVariable("--nested-var", "var(--valid-var)")",
    "valueCode": ""var(--valid-var)"",
  },
  "--valid-var": {
    "setterCode": "defineStyleVariable("--valid-var", "10px")",
    "valueCode": ""10px"",
  },
  "display": {
    "setterCode": "setStyleDisplay(UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSDisplayType, "::", "Flex")",
  },
  "height": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Height, "var(--valid-var)")",
    "valueCode": ""var(--valid-var)"",
  },
  "left": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Left, "var(--double-nested)")",
    "valueCode": ""var(--double-nested)"",
  },
  "max-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MaxWidth, "var(--valid-var)")",
    "valueCode": ""var(--valid-var)"",
  },
  "min-height": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MinHeight, "var(--empty-var)")",
    "valueCode": ""var(--empty-var)"",
  },
  "position": {
    "setterCode": "setStylePosition(UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSPositionType, "::", "Absolute")",
  },
  "top": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Top, "var(--nested-var)")",
    "valueCode": ""var(--nested-var)"",
  },
}
`;

exports[`dom2 static style complex scenarios should handle mixed variable usage and regular values: mixed-variables 1`] = `
{
  "--base-size": {
    "setterCode": "defineStyleVariable("--base-size", "20px")",
    "valueCode": ""20px"",
  },
  "--border-width": {
    "setterCode": "defineStyleVariable("--border-width", "2px")",
    "valueCode": ""2px"",
  },
  "--color-blue": {
    "setterCode": "defineStyleVariable("--color-blue", "#0000FF")",
    "valueCode": ""#0000FF"",
  },
  "--color-red": {
    "setterCode": "defineStyleVariable("--color-red", "#FF0000")",
    "valueCode": ""#FF0000"",
  },
  "border-bottom-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.BorderBottomWidth, "var(--border-width)")",
    "valueCode": ""var(--border-width)"",
  },
  "border-left-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.BorderLeftWidth, "var(--border-width)")",
    "valueCode": ""var(--border-width)"",
  },
  "border-right-width": {
    "setterCode": "setStyleBorderRightWidth(3, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{3, UniCSSUnitType.PX}",
  },
  "border-top-width": {
    "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "height": {
    "setterCode": "setStyleHeight(30, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{30, UniCSSUnitType.PX}",
  },
  "margin-bottom": {
    "setterCode": "setStyleMarginBottom(10, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{10, UniCSSUnitType.PX}",
  },
  "margin-top": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MarginTop, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
  "max-width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.MaxWidth, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
  "min-height": {
    "setterCode": "setStyleMinHeight(15, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{15, UniCSSUnitType.PX}",
  },
  "padding-left": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.PaddingLeft, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
  "padding-right": {
    "setterCode": "setStylePaddingRight(5, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{5, UniCSSUnitType.PX}",
  },
  "width": {
    "setterCode": "setStyleVariable(UniCSSPropertyID.Width, "var(--base-size)")",
    "valueCode": ""var(--base-size)"",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px dashed black: app-harmony-dom-c 1`] = `
{
  "border-bottom-style": {
    "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
  },
  "border-bottom-width": {
    "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-left-style": {
    "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
  },
  "border-left-width": {
    "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-right-style": {
    "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
  },
  "border-right-width": {
    "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-top-style": {
    "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dashed")",
  },
  "border-top-width": {
    "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px dashed black: app-harmony-nv-c 1`] = `
{
  "border-bottom-color": {
    "setterCode": "borderColorBottom(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-bottom-style": {
    "setterCode": "borderStyleBottom(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")",
  },
  "border-left-color": {
    "setterCode": "borderColorLeft(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-left-style": {
    "setterCode": "borderStyleLeft(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")",
  },
  "border-right-color": {
    "setterCode": "borderColorRight(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-right-style": {
    "setterCode": "borderStyleRight(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")",
  },
  "border-top-color": {
    "setterCode": "borderColorTop(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-top-style": {
    "setterCode": "borderStyleTop(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dashed")",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px dotted black: app-harmony-dom-c 1`] = `
{
  "border-bottom-style": {
    "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
  },
  "border-bottom-width": {
    "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-left-style": {
    "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
  },
  "border-left-width": {
    "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-right-style": {
    "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
  },
  "border-right-width": {
    "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-top-style": {
    "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Dotted")",
  },
  "border-top-width": {
    "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px dotted black: app-harmony-nv-c 1`] = `
{
  "border-bottom-color": {
    "setterCode": "borderColorBottom(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-bottom-style": {
    "setterCode": "borderStyleBottom(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")",
  },
  "border-left-color": {
    "setterCode": "borderColorLeft(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-left-style": {
    "setterCode": "borderStyleLeft(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")",
  },
  "border-right-color": {
    "setterCode": "borderColorRight(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-right-style": {
    "setterCode": "borderStyleRight(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")",
  },
  "border-top-color": {
    "setterCode": "borderColorTop(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-top-style": {
    "setterCode": "borderStyleTop(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Dotted")",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px none black: app-harmony-dom-c 1`] = `
{
  "border-bottom-style": {
    "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
  },
  "border-bottom-width": {
    "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-left-style": {
    "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
  },
  "border-left-width": {
    "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-right-style": {
    "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
  },
  "border-right-width": {
    "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-top-style": {
    "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "None")",
  },
  "border-top-width": {
    "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px none black: app-harmony-nv-c 1`] = `
{
  "border-bottom-color": {
    "setterCode": "borderColorBottom(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-bottom-style": {
    "setterCode": "borderStyleBottom(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")",
  },
  "border-left-color": {
    "setterCode": "borderColorLeft(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-left-style": {
    "setterCode": "borderStyleLeft(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")",
  },
  "border-right-color": {
    "setterCode": "borderColorRight(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-right-style": {
    "setterCode": "borderStyleRight(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")",
  },
  "border-top-color": {
    "setterCode": "borderColorTop(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-top-style": {
    "setterCode": "borderStyleTop(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "None")",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px solid black: app-harmony-dom-c 1`] = `
{
  "border-bottom-style": {
    "setterCode": "setStyleBorderBottomStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
  },
  "border-bottom-width": {
    "setterCode": "setStyleBorderBottomWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-left-style": {
    "setterCode": "setStyleBorderLeftStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
  },
  "border-left-width": {
    "setterCode": "setStyleBorderLeftWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-right-style": {
    "setterCode": "setStyleBorderRightStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
  },
  "border-right-width": {
    "setterCode": "setStyleBorderRightWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
  "border-top-style": {
    "setterCode": "setStyleBorderTopStyle(UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniCSSBorderStyleType, "::", "Solid")",
  },
  "border-top-width": {
    "setterCode": "setStyleBorderTopWidth(1, UniCSSUnitType.PX)",
    "valueCode": "UniCSSUnitValue{1, UniCSSUnitType.PX}",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle border 1px solid black: app-harmony-nv-c 1`] = `
{
  "border-bottom-color": {
    "setterCode": "borderColorBottom(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-bottom-style": {
    "setterCode": "borderStyleBottom(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")",
  },
  "border-left-color": {
    "setterCode": "borderColorLeft(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-left-style": {
    "setterCode": "borderStyleLeft(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")",
  },
  "border-right-color": {
    "setterCode": "borderColorRight(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-right-style": {
    "setterCode": "borderStyleRight(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")",
  },
  "border-top-color": {
    "setterCode": "borderColorTop(0xff000000)",
    "valueCode": "0xff000000",
  },
  "border-top-style": {
    "setterCode": "borderStyleTop(UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid"))",
    "valueCode": "UTSCPP.propertyAccess(UniNativeBorderStyle, "::", "Solid")",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle box-shadow 5px 5px black: app-harmony-dom-c 1`] = `{}`;

exports[`dom2 static style parseDom2StaticStyle box-shadow 5px 5px black: app-harmony-nv-c 1`] = `
{
  "box-shadow": {
    "setterCode": "boxShadow(UniNativeBoxShadow(false, 5, 5, 0, 0, 0xff000000))",
    "valueCode": "UniNativeBoxShadow(false, 5, 5, 0, 0, 0xff000000)",
  },
}
`;

exports[`dom2 static style parseDom2StaticStyle box-shadow none: app-harmony-dom-c 1`] = `{}`;

exports[`dom2 static style parseDom2StaticStyle box-shadow none: app-harmony-nv-c 1`] = `
{
  "box-shadow": {
    "setterCode": "boxShadow(null)",
    "valueCode": "null",
  },
}
`;
